--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,5 @@
 body {
-    background: #800080;
+    background: #836DD9;
     font-family: 'Source Sans Pro', Helvetica, Arial, sans-serif;
     color: #fff;
 
@@ -24,7 +24,7 @@ html, body {
   margin: 0;
   height: 100%;
   font-size: 16px;
-  background: #800080;
+  background: #836DD9;
   color: #fff;
   font-family: 'Source Sans Pro'; }
 
