--- a/styles/timetablejs.css
+++ b/styles/timetablejs.css
@@ -37,7 +37,7 @@
   font-size: 1.5em;
   padding: 0 15px;
   background-color: #333;
-  line-height: 96px;
+  line-height: 92px;
 }
 .timetable aside li:not(:last-of-type) {
   border-bottom: 1px solid white;
@@ -55,7 +55,7 @@
   margin: 0;
 }
 .timetable aside li, .timetable time li {
-  height: 96px;
+  height: 92px;
 }
 .timetable section {
   width: 90%;
@@ -130,7 +130,7 @@
   border-bottom: none;
 }
 .timetable ul.room-timeline li:first-child .time-entry {
-  height: 94px;
+  height: 90px;
 }
 .timetable ul.room-timeline li:after, .timetable ul.room-timeline li:before {
   content: "";
@@ -153,7 +153,7 @@
 .timetable .time-entry {
   background-color: #fff;
   transition: 200ms background-color;
-  height: 95px;
+  height: 91px;
   display: block;
   position: absolute;
   z-index: 2;
@@ -166,6 +166,9 @@
 }
 .timetable .time-entry small {
   display: block;
+}
+.timetable .time-entry p {
+  white-space: nowrap;
 }
 .timetable .time-entry:hover {
   background-color: #e6e6e6;
